crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-394-0.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-394-0.json",
  "count": 24,
  "first": [
    1,
    1,
    "1 серия SD/FullHD",
    "SD/FullHD",
    null,
    0
  ],
  "last_number": 24,
  "with_subtitles": 0
}
