crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-394-1.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-394-1.json",
  "count": 24,
  "first": [
    1,
    1,
    "1 серия SD/HD Субтитры",
    "SD/HD",
    "Субтитры",
    1
  ],
  "last_number": 24,
  "with_subtitles": 24
}
