crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-46176-1.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-46176-1.json",
  "count": 5,
  "first": [
    1,
    1,
    "1 серия SD/HD Субтитры",
    "SD/HD",
    "Субтитры",
    1
  ],
  "last_number": 5,
  "with_subtitles": 5
}
