crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-46176-2.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-46176-2.json",
  "count": 4,
  "first": [
    1,
    1,
    "1 серия SD/FullHD LostFilm",
    "SD/FullHD",
    "LostFilm",
    0
  ],
  "last_number": 4,
  "with_subtitles": 0
}
