crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-46176-68.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-46176-68.json",
  "count": 3,
  "first": [
    1,
    null,
    "4-го сезона",
    null,
    null,
    0
  ],
  "last_number": null,
  "with_subtitles": 0
}
