crates/seasonvar-core/tests/snapshots/playlist_snapshots__playlist@plist-49931-0.snap
---
source: crates/seasonvar-core/tests/playlist_snapshots.rs
expression: summary
---
{
  "file": "plist-49931-0.json",
  "count": 3,
  "first": [
    1,
    1,
    "1 серия SD/FullHD RuDub",
    "SD/FullHD",
    "RuDub",
    0
  ],
  "last_number": 3,
  "with_subtitles": 0
}
